# Nova

./: .gitignore  README.md  package-lock.json  package.json
src/: App.vue  main.ts  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: browser-shell.json  default.json
src-tauri/src/: lib.rs
src-tauri/src/command/: browser.rs  cron.rs  file_changes.rs  history.rs  lsp.rs  mod.rs  model_fetch.rs  pet_config.rs  rag.rs  session_files.rs  settings.rs  settings_secrets.rs  shell.rs  skill.rs  todo.rs  tool_path.rs  usage.rs  user_terminal.rs  workspace.rs
src-tauri/src/llm/: cancellation.rs  client.rs  history.rs  mod.rs  query.rs  query_engine.rs  types.rs
src-tauri/src/llm/commands/: types.rs
src-tauri/src/llm/commands/compact/: mod.rs
src-tauri/src/llm/commands/memory/: mod.rs
src-tauri/src/llm/providers/: anthropic.rs  anthropic_prompt.rs  client.rs  mod.rs  openai.rs  openai_prompt.rs  responses.rs  responses_prompt.rs  sse_utils.rs  stream_runner.rs
src-tauri/src/llm/providers/adapters/: mod.rs  reasoning.rs
src-tauri/src/llm/providers/anthropic/: mod.rs  prompt.rs  types.rs
src-tauri/src/llm/query/: state_machine.rs
src-tauri/src/llm/services/: git_ops.rs  git_snapshot.rs  mod.rs  model_fetch.rs  threat_patterns.rs  token_usage_log.rs
src-tauri/src/llm/tools/: mod.rs
src-tauri/src/llm/utils/: atomic_write.rs  context_assembler.rs  error_event.rs  file_io.rs  mod.rs  model_context.rs  paths.rs  pricing.rs  system_prompt.rs  tokens.rs  turn_log.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/prompt/: system_prompt.md
src-tauri/src/windowTokens/: models.json
(+246 files in other folders)
